[package]
name = "better-debug"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.3"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = "2.0.38"
