[package]
name = "better-debug"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "A cooler, and sane Debug macro"
repository = "https://github.com/rakbladsvalsen/BetterDebug"
readme = "README.md"
keywords = ["debug", "macro", "better", "print", "secret"]
categories = ["development-tools::procedural-macro-helpers"]


[lib]
proc-macro = true

[dependencies]
darling = "0.20.3"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = "2.0.38"
